feat: Add Cloudflare and Nginx models and update vies-spring-utils version
This commit introduces new data models for Cloudflare and Nginx, facilitating data transfer between the application and these services. It also updates the vies-spring-utils dependency to version 5.1.8.

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,7 +4,7 @@ server:
 jwt.secret: 'local'
 
 # Database configuration flags
-DATABASE_TYPE: 'h2'
+DATABASE_TYPE: 'h2-memory'
 
 # Common datasource configuration
 spring:
