feat: Implement DNS manager and update vies-spring-utils to 5.2.0
This commit introduces new data models, controllers, services, DAOs, and configurations for DNS management. It also updates the vies-spring-utils dependency to version 5.2.0 and enables Feign clients.

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -53,8 +53,8 @@ MYSQL_PASSWORD: 'dns_manager'
 MYSQL_USE_SSL: 'false'
 
 # -----------------------------------Redis specific configuration-----------------------------------
-REDIS.ENABLED: false
-REDIS.HOST: "localhost"
-REDIS.PORT: 6379
-REDIS.USERNAME: 
-REDIS.PASSWORD: 
+REDIS_ENABLED: true
+REDIS_HOST: "10.24.24.2"
+REDIS_PORT: 6379
+REDIS_USERNAME: 
+REDIS_PASSWORD: 
