--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
-spring.data.redis.repositories.enabled: false
-eureka.client.enabled: false
+# spring.data.redis.repositories.enabled: true
+# eureka.client.enabled: false
 spring.application.name: dns-manager-2
+cloudflare.uri: https://api.cloudflare.com
+
+logging.level.org.springframework.context.annotation: DEBUG
+
 spring.profiles.active: local
