feat: Update dependencies, enable Feign clients, and configure JPA repositories

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,7 +4,7 @@ server:
 jwt.secret: 'local'
 
 # Database configuration flags
-DATABASE_TYPE: 'h2-memory'
+DATABASE_TYPE: 'h2'
 
 # Common datasource configuration
 spring:
