--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,12 @@
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency> -->
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -114,7 +114,7 @@
 		<dependency>
 			<groupId>com.viescloud.eco</groupId>
 			<artifactId>vies-spring-utils</artifactId>
-			<version>5.2.4</version>
+			<version>5.3.0</version>
 		</dependency>
 	</dependencies>
 
