--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 spring.data.redis.repositories.enabled: false
 eureka.client.enabled: false
 spring.application.name: dns-manager-2
-cloudflare.uri: https://api.cloudflare.com
 
+cloudflare.uri: https://api.cloudflare.com
 logging.level.org.springframework.context.annotation: DEBUG
+spring.devtools.restart.enabled: false
 
 spring.profiles.active: local
