feat: Update dependencies, add CORS configuration and use ViesAutoAdminCheckController

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,8 +10,8 @@ DATABASE_TYPE: 'h2'
 spring:
   jpa:
     hibernate:
-      # ddl-auto: update
-      ddl-auto: create-drop
+      ddl-auto: update
+      # ddl-auto: create-drop
   h2:
     console:
       enabled: true
