--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8080
+  port: ${SERVER_PORT:8080}
 
 jwt.secret: ${JWT_SECRET:prod}
 
 # Database configuration flags
-DATABASE_TYPE: ${DATABASE_TYPE:h2}  # h2 or mysql
+# DATABASE_TYPE: ${DATABASE_TYPE:h2}  # h2 or mysql
 
 # Common datasource configuration
 spring:
