--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,7 +4,8 @@ server:
 jwt.secret: 'local'
 
 # Database configuration flags
-DATABASE_TYPE: 'h2'
+DATABASE_TYPE: 'h2-memory'
+OBJECT_STORAGE_TYPE: s3-minio #db or s3-minio or smb
 
 # Common datasource configuration
 spring:
@@ -58,3 +59,16 @@ REDIS_HOST: "10.24.24.2"
 REDIS_PORT: 6379
 REDIS_USERNAME: 
 REDIS_PASSWORD: 
+
+# -----------------------------------Object Storage specific configuration-----------------------------------
+SMB_HOST: 10.24.24.2
+SMB_PORT: 445
+SMB_DOMAIN: cyberpower
+SMB_USERNAME: smb_file_manager
+SMB_PASSWORD: smb_file_manager
+SMB_SHARE_AND_DIR: Business/Smb_file_manager_test
+
+S3_URL: https://minio-api.viescloud.com
+S3_USERNAME: hagyKiJbLn85U1qnLsgN
+S3_PASSWORD: XP4WvxNs8Ant9I4BZrY0b2exA6MrU2rZTin3PawM
+S3_BUCKET: viescloud-test
