--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -5,6 +5,7 @@ jwt.secret: ${JWT_SECRET:prod}
 
 # Database configuration flags
 # DATABASE_TYPE: ${DATABASE_TYPE:h2}  # h2 or mysql
+# OBJECT_STORAGE_TYPE: db #db or s3-minio or smb
 
 # Common datasource configuration
 spring:
@@ -97,3 +98,16 @@ management:
 # REDIS_PORT: 6379
 # REDIS_USERNAME: 
 # REDIS_PASSWORD: 
+
+# -----------------------------------Object Storage specific configuration-----------------------------------
+# SMB_HOST: localhost
+# SMB_PORT: 445
+# SMB_DOMAIN: domain
+# SMB_USERNAME: username
+# SMB_PASSWORD: password
+# SMB_SHARE_AND_DIR: Business/data
+
+# S3_URL: http://localhost:9768
+# S3_USERNAME: username
+# S3_PASSWORD: password
+# S3_BUCKET: bucket1
