--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,7 +4,7 @@ server:
 jwt.secret: 'local'
 
 # Database configuration flags
-DATABASE_TYPE: 'h2-memory'
+DATABASE_TYPE: 'h2'
 OBJECT_STORAGE_TYPE: s3-minio #db or s3-minio or smb
 
 # Common datasource configuration
